--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
+    "lottie-react": "^2.4.0",
     "node": "^21.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
